--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,19 +14,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <include android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
+
 
         <Button
             android:id="@+id/button_to_cycle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:text="@string/button_to_cycle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
         <Button
             android:id="@+id/button_to_click"
             android:layout_width="0dp"
