--- a/app/src/main/res/layout/activity_intents.xml
+++ b/app/src/main/res/layout/activity_intents.xml
@@ -6,17 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".activities.IntentsActivity">
 
+    <include android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
     <Button
         android:id="@+id/btnIntentExtras"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:text="@string/button_intent_extras"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <Button
         android:id="@+id/btnIntentFlags"
